--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "serve": "node dist/app.js",
+    "serve": "node dist/server.js",
     "start": "npm run serve",
     "watch-ts": "npx tsc -w",
-    "watch-node": "nodemon dist/app.js"
+    "watch-node": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
