--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "serve": "node dist/server.js",
+    "serve": "nodemon dist/server.js",
     "start": "npm run serve",
     "watch-ts": "npx tsc -w",
     "watch-node": "nodemon dist/server.js"
@@ -15,7 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mediasoup": "^3.15.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
