--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,9 +6,22 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "8000:8000"
     environment:
       - NODE_ENV=production
     volumes:
       - .:/app
     command: npm start
+  
+  development:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - .:/app
+      - /app/node_modules 
+    command: npm run watch-node
