--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "serve": "nodemon dist/server.js",
+    "serve": "node dist/server.js",
     "start": "npm run serve",
     "watch-ts": "npx tsc -w",
     "watch-node": "nodemon dist/server.js"
